# flashcard

./: .gitignore  pyproject.toml
backend/: Makefile
backend/apis/: urls.py  views.py
backend/core/: settings.py  urls.py
env/: .env.template  template.backend.env
frontend/: Makefile  next.config.ts  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/lib/: api.ts
